# linearize

./: Cargo.toml  README.md
.github/workflows/: clippy.yml  docs-rs.yml  features.yml  miri.yml  msrv.yml  test-nightly.yml  test.yml
linearize/: Cargo.toml
linearize-derive/: Cargo.toml
linearize-derive/src/: lib.rs
linearize-tests/: Cargo.toml  build.rs
linearize-tests/src/: tests.rs
linearize-tests/src/tests/: arbitrary.rs  bytemuck.rs  copy_map.rs  derive.rs  linearize_ext.rs  linearized.rs  macro.rs  map.rs  rand.rs  serde.rs  utils.rs  variants.rs
linearize/src/: copy_map.rs  foreign.rs  impls.rs  lib.rs  linearized.rs  macro.rs  map.rs  storage.rs  variants.rs
linearize/src/foreign/: arbitrary_1.rs  bytemuck_1.rs  rand_0_8.rs  rand_0_9.rs  serde_1.rs
linearize/src/impls/: bool.rs  enums.rs  infallible.rs  integers.rs  phantom_data.rs  phantom_pinned.rs  unit.rs
linearize/src/map/: iters.rs
