[package]
name = "linearize-derive"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mahkoh/linearize"
license = "MIT OR Apache-2.0"
description = "Internal dependency of the linearize crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
syn = { version = "2.0.87", features = ["derive", "parsing", "full"] }
quote = "1.0.37"
